Fixed wrongfully data about the patient.

--- a/iros.tex
+++ b/iros.tex
@@ -102,11 +102,11 @@ This work presents the development of a device which is grounded on this idea, a
 \subsection{Patient Case Study}
 \label{sec:case-study}
 
-Patient is a 31 years-old female, without any history of chronic ailment, who suffered an acute brainstem stroke after giving birth.  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which could be linked to pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, the patient managed to recover significantly, including from dysphagia, which was very important in order to remove the feeding tube allowing her to start speech recovering.  
+Patient is a 36 years-old female, without any history of chronic ailment, who suffered an acute brainstem stroke after giving birth.  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which could be linked to pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in induced coma for around 1 month, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, the patient managed to recover significantly, including from dysphagia, which was very important in order to remove the feeding tube allowing her to start speech recovering.  
 
-After 24 months since event, the patient, was discharged from hospital and maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related to dynamic balance problems while walking.  The patient achieved satisfactory index scores in static balance tests and is able to perform static hip-balance and ankle-balance.  She has recovered muscle force in her legs and can perform lower-limb exercises.  Her vision is normal.   
+After 7 months since event, the patient, was discharged from hospital and maintained a daily rehabilitation treatment, focusing on a remaining affection related to dynamic balance problems while walking.  The patient achieved satisfactory index scores in static balance tests and is able to perform static hip-balance and ankle-balance.  She has recovered muscle force in her legs and can perform lower-limb exercises.  Her vision is normal.   
 
-However, when the patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight), with other people moving around, or when concentration fades while walking, she is unable to keep up with the pace of the gait and the risk of fall increases.  Nowadays, the patient walks freely unaided at home but requires a Canadian cane otherwise.
+However, when the patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight), with other people moving around, or when concentration fades while walking, she is unable to keep up with the pace of the gait and the risk of fall increases.  Nowadays, the patient walks freely unaided at home but requires a Canadian cane otherwise and constant supervision.
 
 %\begin{table*}[t]
 %\begin{center}
