Submitted after review version.@

--- a/iros.bib
+++ b/iros.bib
@@ -1,3 +1,48 @@
+@ARTICLE{Maaref.etal2016,
+  author={Maaref, Mahdi and Rezazadeh, Alireza and Shamaei, Kimia and Ocampo, Renz and Mahdi, Tavakoli},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={A Bicycle Cranking Model for Assist-as-Needed Robotic Rehabilitation Therapy Using Learning From Demonstration}, 
+  year={2016},
+  volume={1},
+  number={2},
+  pages={653-660},
+  doi={10.1109/LRA.2016.2525827}}
+  
+@article{Welniarz.etal2015,
+  title={One hand clapping: lateralization of motor control},
+  author={Welniarz, Quentin and Dusart, Isabelle and Gallea, C{\'e}cile and Roze, Emmanuel},
+  journal={Frontiers in neuroanatomy},
+  volume={9},
+  pages={75},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
+
+@inproceedings{Balasubramian.etal2010,
+  title={Cooperative and active assistance based interactive therapy},
+  author={Balasubramanian, Sivakumar and Zhang, Hang and Buchanan, Sharon and Austin, Hiroko and Herman, Richard and He, Jiping},
+  booktitle={IEEE/ICME International Conference on Complex Medical Engineering},
+  pages={311--315},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{Islam.etal2022,
+title = {Vibrotactile feedback in virtual motor learning: A systematic review},
+journal = {Applied Ergonomics},
+volume = {101},
+pages = {103694},
+year = {2022},
+issn = {0003-6870},
+doi = {https://doi.org/10.1016/j.apergo.2022.103694},
+url = {https://www.sciencedirect.com/science/article/pii/S0003687022000175},
+author = {Md Shafiqul Islam and Sol Lim},
+keywords = {Virtual environment, Vibrotactile feedback, Motor learning},
+abstract = {Vibrotactile feedback can be effectively applied to motor (physical) learning in virtual environments, as it can provide task-intrinsic and augmented feedback to users, assisting them in enhancing their motor performance. This review investigates current uses of vibrotactile feedback systems in motor learning applications built upon virtual environments by systematically synthesizing 24 peer-reviewed studies. We aim to understand: (1) the current state of the science of using real-time vibrotactile feedback in virtual environments for aiding the acquisition (or improvement) of motor skills, (2) the effectiveness of using vibrotactile feedback in such applications, and (3) research gaps and opportunities in current technology. We used the Sensing-Analysis-Assessment-Intervention framework to assess the scientific literature in our review. The review identifies several research gaps in current studies, as well as potential design considerations that can improve vibrotactile feedback systems in virtual motor learning applications, including the selection and placement of feedback devices and feedback designs.}
+}
+
+
+
 @misc{Rahman.etal2022,
   doi = {10.48550/ARXIV.2203.08215},
   
