Added the IROS presentation

--- a/iros.tex
+++ b/iros.tex
@@ -18,7 +18,7 @@
 Franco Paviotti$^{1}$,  Esteban Buniak $^{2}$, Rodrigo Ramele $^{3}$, Orestes Freixes$^{4}$ and Juan Miguel Santos$^{5}$% <-this % stops a space
 \thanks{$^{1}$F. Paviotti, $^{2}$E.Buniak and $^{3}$R.Ramele  are with Bioengineering, Instituto Tecnológico de Buenos Aires (ITBA)
                     Buenos Aires, Argentina
-        {\tt\small fpaviotti@itba.edu.ar}}%
+        {\tt\small \{fpaviotti|ebuniak|rramele\}@itba.edu.ar}}%
 \thanks{$^{4}$O. Freixes is with the CINER Centro Integral de Neurorehabilitación,
                     Buenos Aires, Argentina
         {\tt\small orestesfreixes@gmail.com}}%
