--- a/iros.tex
+++ b/iros.tex
@@ -16,7 +16,7 @@
 
 \author{%
 Franco Paviotti$^{1}$,  Esteban Buniak $^{2}$, Rodrigo Ramele $^{3}$, Orestes Freixes$^{4}$ and Juan Miguel Santos$^{5}$% <-this % stops a space
-\thanks{$^{1}$F. Paviotti, $^{2}$E.Buniak and $^{3}$R.Ramele  are with Bioengineering, Instituto Tecnológico de Buenos Aires (ITBA)
+\thanks{$^{1}$F. Paviotti, $^{2}$E.Buniak and $^{3}$R.Ramele  are with the Instituto Tecnológico de Buenos Aires (ITBA)
                     Buenos Aires, Argentina
         {\tt\small \{fpaviotti|ebuniak|rramele\}@itba.edu.ar}}%
 \thanks{$^{4}$O. Freixes is with the CINER Centro Integral de Neurorehabilitación,
@@ -26,6 +26,9 @@ Franco Paviotti$^{1}$,  Esteban Buniak $^{2}$, Rodrigo Ramele $^{3}$, Orestes Fr
                     Buenos Aires, Argentina
         {\tt\small juan.santos@unahur.edu.ar}}%
 %\thanks{*This work was not supported by any organization}% <-this % stops a space}
+\thanks{\textbf{This extended abstract was presented at the Workshop on Assistive Robotic Systems for Human Balancing and Walking: Emerging Trends and Perspectives at IROS2022.}}
+
+
 }
 
 %\author{\IEEEauthorblockN{1\textsuperscript{st} Franco Paviotti}
@@ -62,7 +65,7 @@ Franco Paviotti$^{1}$,  Esteban Buniak $^{2}$, Rodrigo Ramele $^{3}$, Orestes Fr
 \maketitle
 
 %\begin{abstract}
-%Stroke is a medical condition that can affect motor function, particularly dynamic balance.  Biofeedback can aid in rehabilitaiton procedures which help patients to regain lost motor activity and recover functionality.  In this work, we are presenting a smart-vest device that assist in rehabilitation procedures by providing feedback in the form of vibrotactile stimulation. Information provided by principal caregivers, family, patient in the form of surveys and interview, is used to derive potential clinical causal hypothesis and these are used to drive the experimentation paradigm, and the robotic smart-vest to aid in the whole procedure...
+%Stroke is a medical condition that can affect motor function, particularly dynamic balance.  Biofeedback can aid in rehabilitation procedures which help patients to regain lost motor activity and recover functionality.  In this work, we are presenting a robotic smart-vest device that can analyze Inertial Measurement Unit (IMU) data and assist in rehabilitation procedures by providing timed feedback in the form of vibrotactile stimulation. Information provided by principal caregivers and patients in the form of surveys and interviews, is used to hypothesize potential clinical causes and to derive alternative clinical procedures.
 %\end{abstract}
 
 \begin{IEEEkeywords}
